--- a/motion.html
+++ b/motion.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fortune Cookie</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-  <link rel="stylesheet" href="styles/motion.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fortune Cookie</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <link rel="stylesheet" href="styles/motion.css">
 </head>
 <body>
-  <button id="motion">Request Motion Permission</button>
-  <script src="javascript/motion.js"></script>
+    <h1>Fortune Cookie</h1>
+    <button id="motion">Request Motion Permission</button>
+    <div id="fortune-container">
+        <p class="fortune-text">Your fortune awaits...</p>
+    </div>
+    <script src="javascript/motion.js"></script>
 </body>
 </html>
-
